Fix width on mobile

--- a/public/styles/neon_light_hover_button.css
+++ b/public/styles/neon_light_hover_button.css
@@ -9,6 +9,14 @@
     background: #050801;
 }
 
+@media (max-width: 770px)
+{
+    .neonbuttondiv
+    {
+        width: 100%;
+    }
+}
+
 .neonbuttondiv a
 {
     position: relative;
